<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.example.android.justjava.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question1_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt1" />

            <RadioButton
                android:id="@+id/question1_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt2" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question2"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question2_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt1" />

            <RadioButton
                android:id="@+id/question2_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt2" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question3"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question3_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt1" />

            <RadioButton
                android:id="@+id/question3_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt2" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question4"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question4_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt1" />

            <RadioButton
                android:id="@+id/question4_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt2" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question5"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question5_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt1" />

            <RadioButton
                android:id="@+id/question5_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt2" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question6"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question6_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt1" />

            <RadioButton
                android:id="@+id/question6_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt2" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question7"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question7_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt1" />

            <RadioButton
                android:id="@+id/question7_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt2" />
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Submit"
            android:onClick="SubmitAnswers"/>
        <TextView
            android:id="@+id/your_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"/>
    </LinearLayout>

</ScrollView>